Margin fix on mobile

--- a/client/my-sites/domains/domain-management/transfer/transfer-to-any-user/style.scss
+++ b/client/my-sites/domains/domain-management/transfer/transfer-to-any-user/style.scss
@@ -15,7 +15,7 @@
 	}
 
 	&__container {
-		margin: 16px;
+		margin: 0 16px 16px 16px;
 
 		@include breakpoint-deprecated( ">660px" ) {
 			margin: 0;
@@ -23,9 +23,6 @@
 	}
 
 	.transfer-domain-to-any-user__container {
-		.transfer-domain-to-any-user__main {
-			margin: 16px;
-		}
 		@include break-xlarge {
 			@include grid-row( 1, 1 );
 			@include grid-column( 1, 12 );
